--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,9 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -14,7 +16,10 @@
 
 body {
   background-color: #031c23aa;
+  display: flex;
+  justify-content: center;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #535bfcaa);
 }
